[gd_scene load_steps=8 format=3 uid="uid://7c5gec43lc65"]

[ext_resource type="Script" path="res://level_scenes/level_1/level_1.gd" id="1_7ry3j"]
[ext_resource type="PackedScene" uid="uid://ueg8ih3v8uu4" path="res://level_scenes/level_1/level_1_bg.tscn" id="2_0hldi"]
[ext_resource type="PackedScene" uid="uid://cni74uo7dalfa" path="res://level_scenes/level_1/level_1_mg.tscn" id="3_jm7s7"]
[ext_resource type="PackedScene" uid="uid://dgx5y0qvnu1vu" path="res://level_scenes/level_1/level_1_fg.tscn" id="4_h30l7"]
[ext_resource type="PackedScene" uid="uid://ce2riagpagvsl" path="res://strawberry_knight.tscn" id="5_elnum"]
[ext_resource type="PackedScene" uid="uid://c4wihxbegbm0i" path="res://teleporter.tscn" id="6_lee54"]
[ext_resource type="PackedScene" uid="uid://cpn4yc2sasibl" path="res://portkey.tscn" id="7_m04h0"]

[node name="Level1" type="Node2D"]
script = ExtResource("1_7ry3j")

[node name="Level1_bg" parent="." instance=ExtResource("2_0hldi")]
z_index = -7

[node name="Level1_mg" parent="." instance=ExtResource("3_jm7s7")]
z_index = -5

[node name="Level1_fg" parent="." instance=ExtResource("4_h30l7")]
z_index = -3

[node name="StrawberryKnight" parent="." instance=ExtResource("5_elnum")]
unique_name_in_owner = true
z_index = -4
position = Vector2(5, 280)
scale = Vector2(0.6, 0.6)
collision_layer = 0
collision_mask = 0

[node name="LeftBGTele" parent="." node_paths=PackedStringArray("pairedTeleporter") instance=ExtResource("6_lee54")]
position = Vector2(-100, 180)
collision_layer = 0
collision_mask = 0
pairedTeleporter = NodePath("../RightMGTele")
newScale = 0.35
layer = 6

[node name="LeftMGTele" parent="." node_paths=PackedStringArray("pairedTeleporter") instance=ExtResource("6_lee54")]
position = Vector2(-100, 280)
collision_layer = 0
collision_mask = 0
pairedTeleporter = NodePath("../RightFGTele")
newScale = 0.6
layer = 4

[node name="MiddleMGTele" parent="." node_paths=PackedStringArray("pairedTeleporter") instance=ExtResource("6_lee54")]
position = Vector2(500, 280)
collision_layer = 0
collision_mask = 0
pairedTeleporter = NodePath("../MiddleFGTele")
newScale = 0.6
layer = 4

[node name="RightMGTele" parent="." node_paths=PackedStringArray("pairedTeleporter") instance=ExtResource("6_lee54")]
position = Vector2(1045, 280)
collision_layer = 0
collision_mask = 0
pairedTeleporter = NodePath("../LeftBGTele")
newScale = 0.6
layer = 4

[node name="RightFGTele" parent="." node_paths=PackedStringArray("pairedTeleporter") instance=ExtResource("6_lee54")]
position = Vector2(1045, 300)
collision_layer = 0
collision_mask = 0
pairedTeleporter = NodePath("../LeftMGTele")
newScale = 0.9

[node name="MiddleFGTele" parent="." node_paths=PackedStringArray("pairedTeleporter") instance=ExtResource("6_lee54")]
position = Vector2(500, 300)
collision_layer = 0
collision_mask = 0
pairedTeleporter = NodePath("../MiddleMGTele")
newScale = 0.9

[node name="LeftFGPortkey" parent="." instance=ExtResource("7_m04h0")]
unique_name_in_owner = true
position = Vector2(-100, 300)
portkey_location = 3
paired_portkey_location = 2
linked_level_name = "res://level_scenes/hub/hub.tscn"
new_scale = 0.9

[node name="RightBGPortkey" parent="." instance=ExtResource("7_m04h0")]
unique_name_in_owner = true
position = Vector2(1045, 180)
portkey_location = 4
paired_portkey_location = 1
linked_level_name = "res://level_scenes/hub/hub.tscn"
new_scale = 0.35
layer = 6

[connection signal="body_entered" from="LeftBGTele" to="LeftBGTele" method="_on_body_entered"]
[connection signal="body_exited" from="LeftBGTele" to="LeftBGTele" method="_on_body_exited"]
[connection signal="body_entered" from="LeftMGTele" to="LeftMGTele" method="_on_body_entered"]
[connection signal="body_exited" from="LeftMGTele" to="LeftMGTele" method="_on_body_exited"]
[connection signal="body_entered" from="MiddleMGTele" to="MiddleMGTele" method="_on_body_entered"]
[connection signal="body_exited" from="MiddleMGTele" to="MiddleMGTele" method="_on_body_exited"]
[connection signal="body_entered" from="RightMGTele" to="RightMGTele" method="_on_body_entered"]
[connection signal="body_exited" from="RightMGTele" to="RightMGTele" method="_on_body_exited"]
[connection signal="body_entered" from="RightFGTele" to="RightFGTele" method="_on_body_entered"]
[connection signal="body_exited" from="RightFGTele" to="RightFGTele" method="_on_body_exited"]
[connection signal="body_entered" from="MiddleFGTele" to="MiddleFGTele" method="_on_body_entered"]
[connection signal="body_exited" from="MiddleFGTele" to="MiddleFGTele" method="_on_body_exited"]
[connection signal="body_entered" from="LeftFGPortkey" to="LeftFGPortkey" method="_on_body_entered"]
[connection signal="body_exited" from="LeftFGPortkey" to="LeftFGPortkey" method="_on_body_exited"]
[connection signal="body_entered" from="RightBGPortkey" to="RightBGPortkey" method="_on_body_entered"]
[connection signal="body_exited" from="RightBGPortkey" to="RightBGPortkey" method="_on_body_exited"]
